correction  letter-spacing

--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -85,6 +85,7 @@ screen and (min-resolution: 2dppx) {
     display: inline-block;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    letter-spacing: -0.02em;
 }
 
 .hero-link:hover,
@@ -118,6 +119,7 @@ screen and (min-resolution: 2dppx) {
         padding: 16px 40px;
         min-width: 179px;
         height: 52px;
+        letter-spacing: -0.02em;
     }
 }
 
